--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/UndergraduateArtificialIntelligenceClub/blackjackRL#readme",
   "devDependencies": {
     "bulma": "^0.8.2",
+    "cssnano": "^4.1.10",
     "sass": "^1.26.8",
     "typescript": "^3.9.5"
   }
