--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "NODE_ENV=production parcel build src/index.html --public-url . --detailed-report",
+    "deploy": "NODE_DEBUG=gh-pages gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "bulma": "^0.8.2",
     "cssnano": "^4.1.10",
     "sass": "^1.26.8",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "gh-pages": "^3.0.0",
+    "parcel-plugin-clean-dist": "0.0.6"
   }
 }
