--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
         node-version: [10.x, 12.x, 14.x]
 
     steps:
+    - name: Setup Git
+      run: |
+        git config --global user.name UAIS
+        git config --global user.email uais@ualberta.ca
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
