--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
     - run: sudo npm i -g parcel-bundler
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run deploy
+    - run: npm run deploy | cat ~/.npm/_logs/*-debug.log
