--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [14.x]
 
     steps:
     - name: Setup Git
@@ -31,4 +31,4 @@ jobs:
     - run: sudo npm i -g parcel-bundler
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run deploy | cat ~/.npm/_logs/*-debug.log
+    - run: npm run deploy
