--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
     - name: Setup Git
       run: |
-        git config --global user.name UAIS
-        git config --global user.email uais@ualberta.ca
+        git config --global user.name "${{ secrets.ADMIN_NAME }}"
+        git config --global user.email "${{ secrets.ADMIN_EMAIL }}"
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
