--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         git config --global user.name "${{ secrets.ADMIN_NAME }}"
         git config --global user.email "${{ secrets.ADMIN_EMAIL }}"
+        cat "${{ secrets.SSH }}" > ~/.ssh/id_rsa
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
