--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,6 @@ jobs:
 
     steps:
     - name: Setup Git
-      run: |
-        git config --global user.name "${{ secrets.ADMIN_NAME }}"
-        git config --global user.email "${{ secrets.ADMIN_EMAIL }}"
-        cat "${{ secrets.SSH }}" > ~/.ssh/id_rsa
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
@@ -32,4 +28,7 @@ jobs:
     - run: sudo npm i -g parcel-bundler
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run deploy
+    - name: Deploy
+      uses: crazy-max/ghaction-github-pages@v2.0.1
+      with:
+        build_dir: dist
