--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,5 @@ jobs:
       uses: crazy-max/ghaction-github-pages@v2.0.1
       with:
         build_dir: dist
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
